Fix tool controls z-index

--- a/app/resources/css/subject-viewer.styl
+++ b/app/resources/css/subject-viewer.styl
@@ -41,6 +41,7 @@
     background: rgba(white, 0.75)
     color: black
     text-align: left
+    z-index: 1
 
     .decision-tree-question
       padding: 5px 10px
